Исправлена опечатка в файле

--- a/training/Descontent Model Training.ipynb
+++ b/training/Descontent Model Training.ipynb
@@ -980,16 +980,13 @@
         "            preds = model(images)\n",
         "\n",
         "            for target, pred in zip(targets, preds):\n",
-        "                # Истинные значения\n",
         "                gt_boxes = target['boxes'].to(DEVICE)\n",
         "                gt_labels = target['labels'].to(DEVICE)\n",
         "\n",
-        "                # Предсказания\n",
         "                pred_boxes = pred['boxes'].to(DEVICE)\n",
         "                pred_labels = pred['labels'].to(DEVICE)\n",
         "                pred_scores = pred['scores'].to(DEVICE)\n",
         "\n",
-        "                # Применяем порог уверенности\n",
         "                conf_mask = pred_scores >= conf_threshold\n",
         "                pred_boxes = pred_boxes[conf_mask]\n",
         "                pred_labels = pred_labels[conf_mask]\n",
@@ -997,13 +994,11 @@
         "                if len(gt_boxes) == 0 and len(pred_boxes) == 0:\n",
         "                    continue\n",
         "\n",
-        "                # Сопоставляем предсказания с истинными боксами\n",
         "                if len(gt_boxes) > 0 and len(pred_boxes) > 0:\n",
         "                    ious = box_iou(gt_boxes, pred_boxes)\n",
         "                    matched_pred = set()\n",
         "                    matched_gt = set()\n",
         "\n",
-        "                    # Связываем GT с предсказаниями через IoU\n",
         "                    for gt_idx in range(len(gt_boxes)):\n",
         "                        if torch.any(ious[gt_idx] >= iou_threshold):\n",
         "                            best_pred = torch.argmax(ious[gt_idx])\n",
@@ -1013,34 +1008,30 @@
         "                                matched_pred.add(best_pred)\n",
         "                                matched_gt.add(gt_idx)\n",
         "\n",
-        "                    # False Negatives (FN)\n",
         "                    for gt_idx in range(len(gt_boxes)):\n",
         "                        if gt_idx not in matched_gt:\n",
         "                            all_preds.append(-1)\n",
         "                            all_targets.append(gt_labels[gt_idx].item())\n",
         "\n",
-        "                    # False Positives (FP)\n",
         "                    for pred_idx in range(len(pred_boxes)):\n",
         "                        if pred_idx not in matched_pred:\n",
         "                            all_preds.append(pred_labels[pred_idx].item())\n",
         "                            all_targets.append(-1)\n",
         "\n",
-        "                elif len(gt_boxes) == 0:  # Все предсказания - FP\n",
+        "                elif len(gt_boxes) == 0: \n",
         "                    for pred_idx in range(len(pred_boxes)):\n",
         "                        all_preds.append(pred_labels[pred_idx].item())\n",
         "                        all_targets.append(-1)\n",
         "\n",
-        "                elif len(pred_boxes) == 0:  # Все истинные значения - FN\n",
+        "                elif len(pred_boxes) == 0: \n",
         "                    for gt_idx in range(len(gt_boxes)):\n",
         "                        all_preds.append(-1)\n",
         "                        all_targets.append(gt_labels[gt_idx].item())\n",
         "\n",
-        "    # Фильтруем фон (-1)\n",
         "    mask = (np.array(all_targets) != -1) & (np.array(all_preds) != -1)\n",
         "    filtered_targets = np.array(all_targets)[mask]\n",
         "    filtered_preds = np.array(all_preds)[mask]\n",
         "\n",
-        "    # Вычисляем метрики\n",
         "    class_wise_f1 = f1_score(filtered_targets, filtered_preds, average=None, zero_division=0)\n",
         "    weighted_f1 = f1_score(filtered_targets, filtered_preds, average='weighted', zero_division=0)\n",
         "\n",
